add template based job script generation
